@@ -33,6 +33,7 @@ https://github.com/elastic/beats/compare/v5.0.1...master[Check the HEAD diff]
 ==== Bugfixes
 
 *Affecting all Beats*
+- Fix empty benign errors logged by processor actions. {pull}3046[3046]
 
 *Metricbeat*
 
